--- a/zxing/build.gradle
+++ b/zxing/build.gradle
@@ -10,9 +10,9 @@ android {
 }
 
 dependencies {
-    compile 'com.google.zxing:core:3.3.3'
+    implementation 'com.google.zxing:core:3.3.3'
     if(hasProperty("publishAar")) {
-        compile "cn.bingoogolapple:bga-qrcode-core:${VERSION_NAME}"
+        implementation "cn.bingoogolapple:bga-qrcode-core:${VERSION_NAME}"
     } else {
         api project(':qrcodecore')
     }
